--- a/rock-protection/index.html
+++ b/rock-protection/index.html
@@ -268,6 +268,12 @@
     </ul>
   </section>
   <section class="center">
+    <h3>Contact</h3>
+    <p>Email: grantfreeman@pm.me</p>
+    <p></p>
+    <a href="https://github.com/climber-guide/climber-guide.github.io/issues">GitHub: Report Issue</a>
+  </section>
+  <section class="center">
     <h3>Extra</h3>
     <img src="friend-patent.jpg" style="border: 1px solid #41444B;object-fit: contain;max-width: 100%;">
     <div style="margin-bottom: 4rem;">Ray Jardine's 1978 'Friend' US Patent (4,184,657)</div>
