patch mozilla thumb slider

--- a/rock-protection/index.html
+++ b/rock-protection/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Climber's Guide</title>
   <link rel="stylesheet" href="/css/dual-range-input.css?v=1.0.0">
-  <link rel="stylesheet" href="/css/pro.css?v=1.1.0">
+  <link rel="stylesheet" href="/css/pro.css?v=1.1.1">
   <script src="/js/chart.js?v=4.4.8"></script>
   <script src="/js/chartjs-plugin-datalabels.js?v=2.2.0"></script>
   <script src="/js/dual-range-input.js?v=1.0.0"></script>
@@ -55,7 +55,7 @@
         </tr>
       </table>
       <br>
-      <p class="center">Click on the legend item 'Operation (mm)' to see switch between operation and expansion.</p>
+      <p class="center">Click on the legend item 'Operation (mm)' to switch between operation and expansion.</p>
       <section id="expansion-vs-operation"></section>
       <h5>Hexes and Nuts</h5>
       <p>
